--- a/question.html
+++ b/question.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mingming 依恋关系测评</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -49,10 +49,11 @@
                 <div class="test-info">
                     <h3 data-lang="test-info-title">测评说明</h3>
                     <ul>
-                        <li data-lang="test-info-1">测评包含36个问题，大约需要5-8分钟</li>
-                        <li data-lang="test-info-2">请根据你的真实感受回答，没有对错之分</li>
-                        <li data-lang="test-info-3">测评结果将帮助你更好地理解自己的关系模式</li>
-                        <li data-lang="test-info-4">所有信息严格保密，仅用于科学研究</li>
+                        <li data-lang="test-info-1">测评包含36个问题，基于科学的ECR-R量表，大约需要8-10分钟</li>
+                        <li data-lang="test-info-2">请根据你在亲密关系中的一般体验回答，而不仅仅是当前关系</li>
+                        <li data-lang="test-info-3">请诚实回答你的真实感受，没有对错之分</li>
+                        <li data-lang="test-info-4">所有信息严格保密，仅用于科学研究目的</li>
+                        <li class="rating-explanation">评分标准：1=强烈不同意 2=不同意 3=有些不同意 4=既不同意也不反对 5=有些同意 6=同意 7=强烈同意</li>
                     </ul>
                 </div>
 
@@ -119,6 +120,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
